--- a/pages/nav/nav.module.css
+++ b/pages/nav/nav.module.css
@@ -35,6 +35,7 @@
     list-style: none;
     padding-left: 1.5rem;
     font-weight: 600;
+    font-size: larger;
 }
 .social{
     margin-left: auto;
