--- a/pages/Navbar/Nav.module.css
+++ b/pages/Navbar/Nav.module.css
@@ -1,7 +1,7 @@
 .build{
-    background: #18122D;;
-    height: 100vh;
     width: 100%;
+    min-height: 20vh;
+    min-width: 100%;
 }
 .content{
 
@@ -30,6 +30,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 .ul li{
     list-style: none;
@@ -45,4 +46,5 @@
 }
 .social .img{
     margin-right: 1.4rem;
+    cursor: pointer;
 }
