--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -1,6 +1,120 @@
-    .build{
-        background: #18122D;;
-        width: 100%;
-        min-height: 100vh;
-        min-width: 100%;
-    }
+.build {
+  background: #18122d;
+  width: 100%;
+  min-height: 100vh;
+  min-width: 100%;
+}
+.contain {
+  /* border: 2px solid #fff; */
+  height: 100vh;
+  margin-top: 1rem;
+}
+.container {
+  /* border: 2px solid #fff; */
+  margin: 0 3rem 0 3rem;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.container1 {
+  /* border: 2px solid rgb(33, 255, 13); */
+  width: 65%;
+  padding: 1rem 1rem 0rem 0rem;
+}
+.container2 {
+  /* border: 2px solid rgb(7, 31, 241); */
+  width: 33%;
+}
+.search {
+  background: #18122d;
+  color: #fff;
+  border: 1px solid #cdbdff;
+  border-radius: 50px;
+  height: 4rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem 0 1rem;
+}
+.imgIn {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+}
+.input {
+  background: transparent;
+  border: none;
+  margin-left: 1rem;
+  font-size: 18px;
+}
+.input::placeholder {
+  color: #cdbdff;
+}
+.widget {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 2px solid #fff; */
+  padding: 0 1.5rem 0 0;
+  margin-top: 1rem;
+}
+.widget1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 2px solid #fff; */
+}
+.button1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 40px;
+  width: 127px;
+  height: 43px;
+  background: rgba(205, 189, 255, 0.15);
+}
+.button1 h3 {
+  width: 66px;
+  height: 24px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.015em;
+  color: #cdbdff;
+}
+
+.button2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  width: 127px;
+  height: 43px;
+  background: none;
+  border: none;
+}
+.button2 h3 {
+  width: 78px;
+  height: 24px;;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+
+  letter-spacing: -0.015em;
+
+  color: #cdbdff;
+}
