--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -1,8 +1,8 @@
 .build {
   background: #18122d;
   width: 100%;
-  min-height: 100vh;
   min-width: 100%;
+  /* height: 100vh; */
 }
 .contain {
   /* border: 2px solid #fff; */
@@ -59,7 +59,7 @@
   align-items: center;
   justify-content: space-between;
   /* border: 2px solid #fff; */
-  padding: 0 1.5rem 0 0;
+  padding: 0 1rem 0 0;
   margin-top: 1rem;
 }
 .widget1 {
@@ -105,7 +105,7 @@
 }
 .button2 h3 {
   width: 78px;
-  height: 24px;;
+  height: 24px;
 
   font-family: "Poppins";
   font-style: normal;
@@ -117,4 +117,87 @@
   letter-spacing: -0.015em;
 
   color: #cdbdff;
+}
+.Bigbox {
+  border: 1px solid rgba(205, 189, 255, 0.5);
+  height: 100vh;
+  margin-top: 1.5rem;
+  border-radius: 15px;
+}
+.box {
+  /* border: 1px solid rgba(205, 189, 255, 0.5); */
+  /* height: 30%; */
+  min-height: 30%;
+  max-height: 60%;
+  /* margin-top: 1.5rem; */
+}
+.post {
+}
+.post main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px 5px 20px;
+  /* border: 1px solid gainsboro; */
+  max-height: 14vh;
+  /* position: absolute; */
+}
+.post main div {
+  display: flex;
+  align-items: center;
+  /* border: 2px solid #fff; */
+}
+.post main div section {
+  /* border: 2px solid #fff; */
+  max-height: 8vh;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+/* .post main div section h3 {
+  border: 1px solid saddlebrown;
+}
+*/
+
+.post main h4 {
+  /* border: 1px solid olive; */
+  margin-bottom: 3rem;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #cdbdff;
+}
+
+.name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  color: #f7f5f2;
+}
+
+.name .verified {
+  margin-left: 5px;
+}
+
+.username {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  /* or 154% */
+
+  display: flex;
+  align-items: center;
+
+  color: #f0b5f0;
 }
