--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -2,17 +2,21 @@
   background: #18122d;
   width: 100%;
   min-width: 100%;
-  /* height: 100vh; */
+  height: 150vh;
+  /* overflow: hidden; */
+  /* border: 2px solid #fff; */
+}
+.build2 {
 }
 .contain {
   /* border: 2px solid #fff; */
-  height: 100vh;
+  /* height: 100vh; */
   margin-top: 1rem;
 }
 .container {
   /* border: 2px solid #fff; */
   margin: 0 3rem 0 3rem;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -120,19 +124,36 @@
 }
 .Bigbox {
   border: 1px solid rgba(205, 189, 255, 0.5);
-  height: 100vh;
+  /* height: 100%; */
   margin-top: 1.5rem;
   border-radius: 15px;
+  height: 100vh;
+  /* overflow: scroll; */
+  /* overflow-y: hidden; */
+  overflow: hidden;
 }
 .box {
   /* border: 1px solid rgba(205, 189, 255, 0.5); */
   /* height: 30%; */
-  min-height: 30%;
-  max-height: 60%;
+  /* min-height: 30%;
+  max-height: 60%; */
+  /* height: 100vh; */
   /* margin-top: 1.5rem; */
+  box-sizing: content-box;
+  height: 100%;
+  overflow-y: scroll;
 }
+.box::-webkit-scrollbar {
+  display: none;
+}
+
 .post {
+  border-bottom: 1px solid rgba(205, 189, 255, 0.5);
 }
+.post:last-child{
+    border: none;
+}
+
 .post main {
   display: flex;
   flex-direction: row;
@@ -140,7 +161,7 @@
   align-items: center;
   padding: 0px 20px 5px 20px;
   /* border: 1px solid gainsboro; */
-  max-height: 14vh;
+  max-height: 10vh;
   /* position: absolute; */
 }
 .post main div {
@@ -194,10 +215,39 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 20px;
-  /* or 154% */
-
-  display: flex;
-  align-items: center;
-
   color: #f0b5f0;
+}
+.post .text {
+  /* border: 2px solid #f0b5f0; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5rem 1rem 5rem;
+}
+.post .text span {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+
+  color: #f7f5f2;
+  /* border: 2px solid #fff; */
+}
+
+.post .text .react {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  /* border: 2px solid #fff; */
+  margin-top: 0.6rem;
+  margin-right: auto;
+  /* left: 1.5rem; */
+}
+.post .text .react li {
+  padding-right: 1.7rem;
+  list-style: none;
+  /* border: 2px solid red; */
 }
