--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -1,6 +1,436 @@
-    .build{
-        background: #18122D;;
-        width: 100%;
-        min-height: 100vh;
-        min-width: 100%;
-    }
+.build {
+  background: #18122d;
+  width: 100%;
+  min-width: 100%;
+  height: fit-content;
+  /* overflow: hidden; */
+  /* border: 2px solid #fff; */
+}
+.build2 {
+}
+.contain {
+  /* border: 2px solid #fff; */
+  /* height: 100vh; */
+  margin-top: 1rem;
+}
+.container {
+  /* border: 2px solid #fff; */
+  margin: 0 5rem 0 3rem;
+  /* height: 100vh; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.container1 {
+  /* border: 2px solid rgb(33, 255, 13); */
+  width: 65%;
+  padding: 1rem 1rem 0rem 0rem;
+}
+.container2 {
+  /* border: 2px solid rgb(7, 31, 241); */
+  width: 34%;
+  margin-top: 1.5rem;
+  /* border: 2px solid rebeccapurple; */
+}
+.search {
+  background: #18122d;
+  color: #fff;
+  border: 1px solid #cdbdff;
+  border-radius: 50px;
+  height: 4rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem 0 1rem;
+}
+.imgIn {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+}
+.input {
+  background: transparent;
+  border: none;
+  margin-left: 1rem;
+  font-size: 18px;
+  outline: none;
+}
+.input::placeholder {
+  color: #cdbdff;
+}
+.widget {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 2px solid #fff; */
+  padding: 0 1rem 0 0;
+  margin-top: 1rem;
+}
+.widget1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 2px solid #fff; */
+}
+.button1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 40px;
+  width: 127px;
+  height: 43px;
+  background: rgba(205, 189, 255, 0.15);
+  cursor: pointer;
+}
+.button1 h3 {
+  width: 66px;
+  height: 24px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -0.015em;
+  color: #cdbdff;
+}
+
+.button2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  width: 127px;
+  height: 43px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+.button2 h3 {
+  width: 78px;
+  height: 24px;
+
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+  cursor: pointer;
+  letter-spacing: -0.015em;
+
+  color: #cdbdff;
+}
+.Bigbox {
+  border: 1px solid rgba(205, 189, 255, 0.5);
+  /* height: 100%; */
+  margin-top: 1.5rem;
+  padding-top: 0.6rem;
+  border-radius: 15px;
+  height: 200vh;
+  /* overflow: scroll; */
+  /* overflow-y: hidden; */
+  overflow: hidden;
+}
+.box {
+  /* border: 1px solid rgba(205, 189, 255, 0.5); */
+  /* height: 30%; */
+  /* min-height: 30%;
+  max-height: 60%; */
+  /* height: 100vh; */
+  /* margin-top: 1.5rem; */
+  box-sizing: content-box;
+  height: 100%;
+  overflow-y: scroll;
+}
+.box::-webkit-scrollbar {
+  display: none;
+}
+
+.post {
+  border-bottom: 1px solid rgba(205, 189, 255, 0.5);
+  padding-top: 0.5rem;
+}
+.post:last-child {
+  border: none;
+}
+
+.post main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 20px 5px 20px;
+  /* border: 1px solid gainsboro; */
+  max-height: 10vh;
+  /* position: absolute; */
+}
+.post main div {
+  display: flex;
+  align-items: center;
+  /* border: 2px solid #fff; */
+}
+.post main div section {
+  /* border: 2px solid #fff; */
+  max-height: 8vh;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+.post .spanNot {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  align-items: center;
+  justify-content: start;
+  /* border: 3px solid rosybrown; */
+  gap: 5px;
+  margin: 0.6rem 0 0.7rem 1.5rem;
+}
+.post .spanNot h5,
+.post .spanNot h4 {
+  margin: 0;
+  padding: 0;
+}
+.post .spanNot h4 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 20px;
+
+  color: #cdbdff;
+}
+.post .spanNot h5 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  color: #cdbdff;
+}
+/* .post main div section h3 {
+  border: 1px solid saddlebrown;
+}
+*/
+
+.post main h4 {
+  /* border: 1px solid olive; */
+  margin-bottom: 2rem;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #cdbdff;
+}
+
+.name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: fit-content;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 24px;
+  color: #f7f5f2;
+  /* border: 1px solid #fff; */
+}
+
+.name .verified {
+  margin-left: 5px;
+}
+
+.username {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  color: #f0b5f0;
+  width: fit-content;
+  /* border: 1px solid #fff; */
+
+}
+.post .text {
+  /* border: 2px solid #f0b5f0; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 5rem 1rem 5rem;
+}
+.post .text span {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+
+  color: #f7f5f2;
+  /* border: 2px solid #fff; */
+}
+
+.post .text .react {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: flex-start;
+  /* border: 2px solid #fff; */
+  margin-top: 0.6rem;
+  margin-right: auto;
+  /* left: 1.5rem; */
+}
+.post .text .react li {
+  padding-right: 1.7rem;
+  list-style: none;
+  /* border: 2px solid red; */
+}
+.container2 {
+}
+.card1 {
+  height: 141px;
+  background: rgba(255, 236, 22, 0.3);
+  border: 1px solid #ffec16;
+  border-radius: 12px;
+  padding: 0 1.5rem 0 1.5rem;
+}
+.card1 h2 {
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  /* border: 2px solid red; */
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  color: #ffec16;
+  width: fit-content;
+  gap: 0.6rem;
+}
+
+.card1 p {
+  /* border: 2px solid #fff; */
+  width: 89%;
+  margin-top: 0;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+
+  color: #ffec16;
+}
+.container2 h3 {
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 24px;
+  color: #cdbdff;
+  margin: 1.5rem 0rem 1rem 0.5rem;
+}
+
+.card2 {
+  background: rgba(231, 72, 230, 0.25);
+  border: 1px solid #e748e6;
+  border-radius: 12px;
+  padding: 0 1.5rem 0 1.5rem;
+  height: 150px;
+}
+.card2 button {
+  background: transparent;
+  border: none;
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  /* border: 2px solid #cdbdff; */
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+
+  color: #e748e6;
+}
+.card2 h2 {
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  color: #e748e6;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  margin-bottom: 10px;
+}
+
+.card2 p {
+  /* border: 2px solid #fff; */
+  width: 90%;
+  margin-top: 0;
+  margin-bottom: 7px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #f0b5f0;
+}
+
+.card3 {
+  background: rgba(231, 72, 230, 0.25);
+  border: 1px solid #e748e6;
+  border-radius: 12px;
+  padding: 0 1.5rem 0 1.5rem;
+  height: 100px;
+  margin-top: 1rem;
+}
+.card3 button {
+  background: transparent;
+  border: none;
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 22px;
+  /* border: 2px solid #cdbdff; */
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  cursor: pointer;
+
+  color: #e748e6;
+}
+.card3 h2 {
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 24px;
+  color: #e748e6;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  margin-bottom: 10px;
+}
+.video{
+  margin: 1.5rem 0 1rem 0;
+}
