--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -2,7 +2,7 @@
   background: #18122d;
   width: 100%;
   min-width: 100%;
-  height: 150vh;
+  height: fit-content;
   /* overflow: hidden; */
   /* border: 2px solid #fff; */
 }
@@ -28,7 +28,7 @@
 }
 .container2 {
   /* border: 2px solid rgb(7, 31, 241); */
-  width: 32%;
+  width: 34%;
   margin-top: 1.5rem;
   /* border: 2px solid rebeccapurple; */
 }
@@ -55,6 +55,7 @@
   border: none;
   margin-left: 1rem;
   font-size: 18px;
+  outline: none;
 }
 .input::placeholder {
   color: #cdbdff;
@@ -85,6 +86,7 @@
   width: 127px;
   height: 43px;
   background: rgba(205, 189, 255, 0.15);
+  cursor: pointer;
 }
 .button1 h3 {
   width: 66px;
@@ -108,6 +110,7 @@
   height: 43px;
   background: none;
   border: none;
+  cursor: pointer;
 }
 .button2 h3 {
   width: 78px;
@@ -119,7 +122,7 @@
   font-size: 16px;
   line-height: 24px;
   /* identical to box height */
-
+  cursor: pointer;
   letter-spacing: -0.015em;
 
   color: #cdbdff;
@@ -128,8 +131,9 @@
   border: 1px solid rgba(205, 189, 255, 0.5);
   /* height: 100%; */
   margin-top: 1.5rem;
+  padding-top: 0.6rem;
   border-radius: 15px;
-  height: 100vh;
+  height: 200vh;
   /* overflow: scroll; */
   /* overflow-y: hidden; */
   overflow: hidden;
@@ -151,6 +155,7 @@
 
 .post {
   border-bottom: 1px solid rgba(205, 189, 255, 0.5);
+  padding-top: 0.5rem;
 }
 .post:last-child {
   border: none;
@@ -217,7 +222,7 @@
 
 .post main h4 {
   /* border: 1px solid olive; */
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
@@ -230,13 +235,14 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
+  width: fit-content;
   font-family: "Poppins";
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
   line-height: 24px;
   color: #f7f5f2;
+  /* border: 1px solid #fff; */
 }
 
 .name .verified {
@@ -250,6 +256,9 @@
   font-size: 13px;
   line-height: 20px;
   color: #f0b5f0;
+  width: fit-content;
+  /* border: 1px solid #fff; */
+
 }
 .post .text {
   /* border: 2px solid #f0b5f0; */
@@ -352,6 +361,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  cursor: pointer;
 
   color: #e748e6;
 }
@@ -404,6 +414,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  cursor: pointer;
 
   color: #e748e6;
 }
@@ -419,4 +430,7 @@
   align-items: center;
   gap: 0.6rem;
   margin-bottom: 10px;
+}
+.video{
+  margin: 1.5rem 0 1rem 0;
 }
