--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 .build {
   background: #18122d;
   width: 100%;
   min-width: 100%;
   height: fit-content;
+  padding-bottom: 2rem;
   /* overflow: hidden; */
   /* border: 2px solid #fff; */
 }
@@ -56,6 +58,16 @@
   margin-left: 1rem;
   font-size: 18px;
   outline: none;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  /* identical to box height */
+
+  letter-spacing: -0.015em;
+
+  color: #cdbdff;
 }
 .input::placeholder {
   color: #cdbdff;
@@ -74,6 +86,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
   /* border: 2px solid #fff; */
 }
 .button1 {
@@ -97,6 +110,16 @@
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -0.015em;
+  color: #cdbdff;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  /* identical to box height */
+
+  letter-spacing: -0.015em;
+
   color: #cdbdff;
 }
 
@@ -238,10 +261,10 @@
   width: fit-content;
   font-family: "Poppins";
   font-style: normal;
-  font-weight: 500;
+  font-weight: 550;
   font-size: 15px;
   line-height: 24px;
-  color: #f7f5f2;
+  color: #faf9f9;
   /* border: 1px solid #fff; */
 }
 
@@ -258,7 +281,6 @@
   color: #f0b5f0;
   width: fit-content;
   /* border: 1px solid #fff; */
-
 }
 .post .text {
   /* border: 2px solid #f0b5f0; */
@@ -266,7 +288,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 5rem 1rem 5rem;
+  margin: 0 3rem 1rem 5rem;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #f7f5f2;
 }
 .post .text span {
   font-family: "Poppins";
@@ -290,7 +318,8 @@
   /* left: 1.5rem; */
 }
 .post .text .react li {
-  padding-right: 1.7rem;
+  padding-right: 2.5rem;
+  margin: 0.5rem 0 0.5rem 0;
   list-style: none;
   /* border: 2px solid red; */
 }
@@ -333,7 +362,7 @@
 .container2 h3 {
   font-family: "Syne";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 800;
   font-size: 15px;
   line-height: 24px;
   color: #cdbdff;
@@ -428,9 +457,10 @@
   width: fit-content;
   display: flex;
   align-items: center;
-  gap: 0.6rem;
+  /* gap: 0.6rem; */
   margin-bottom: 10px;
+  /* border: 2px solid #cdbdff; */
 }
-.video{
+.video {
   margin: 1.5rem 0 1rem 0;
 }
