--- a/pages/Feed/Feed.module.css
+++ b/pages/Feed/Feed.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap");
 .build {
   background: #18122d;
   width: 100%;
@@ -63,11 +64,9 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
-  /* identical to box height */
-
   letter-spacing: -0.015em;
-
-  color: #cdbdff;
+  width: 30rem;
+  color: #fff;
 }
 .input::placeholder {
   color: #cdbdff;
@@ -463,4 +462,210 @@
 }
 .video {
   margin: 1.5rem 0 1rem 0;
+}
+
+.PostBody {
+  position: absolute;
+  background: #18122d;
+  border: 1px solid rgba(205, 189, 255, 0.5);
+  border-radius: 15px;
+  width: 40rem;
+  /* border: 2px solid #fff; */
+  margin-left: 4rem;
+  height: fit-content;
+}
+.component {
+  /* border: 2px solid #fff; */
+}
+.span {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+  border-bottom: 1px solid rgba(205, 189, 255, 0.5);
+}
+.span h4 {
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 24px;
+
+  color: #cdbdff;
+}
+.icons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  border-bottom: 1px solid rgba(205, 189, 255, 0.5);
+  padding: 0 12px 0 12px;
+  /* margin-top: 0.8rem; */
+  gap: 18px;
+  /* width: 8rem; */
+}
+.icons h5 {
+  margin-left: auto;
+  padding-right: 10px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: #5d24bb;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+  border: 1px solid #cdbdff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+}
+.write textarea {
+  background: transparent;
+  border: none;
+  outline: none;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  margin-left: 1rem;
+  margin-top: 1rem;
+  width: 35rem;
+  color: #fff;
+  /* height: 5rem; */
+  /* border: 1px solid wheat; */
+}
+.write textarea::placeholder {
+  color: #cdbdff;
+}
+.PostWith {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 1rem 0.9rem 0 1rem;
+  gap: 15px;
+}
+.PostBody h6 {
+  margin-left: auto;
+  padding-right: 10px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-align: center;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+  cursor: pointer;
+
+  background: rgba(205, 189, 255, 0.15);
+  border: 1px solid rgba(124, 58, 237, 0.5);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+}
+.drop {
+  position: absolute;
+  background: #18122d;
+  height: fit-content;
+  right: 5rem;
+  border: 1px solid rgba(205, 189, 255, 0.5);
+  border-radius: 15px;
+  width: 12rem;
+  /* margin: 0 1rem 0 1rem; */
+}
+.drop div {
+  /* padding: 0rem 0.5rem 0 0.5rem; */
+}
+.drop div h3 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  color: #cdbdff;
+  margin: 0;
+  padding: 1rem 0.5rem 0 1rem;
+}
+.drop div h4 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 20px;
+  color: #f0b5f0;
+  padding: 0rem 0.5rem 0 1rem;
+
+  margin: 0 0 8px 0;
+  gap: 8px;
+
+}
+.border {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding: 0.5rem;
+}
+.border div {
+  border: 1px solid rgba(205, 189, 255, 0.5);
+  padding: 0rem 1rem 0rem 0rem;
+  border-radius: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  height: 2.5rem;
+  color: #cdbdff;
+}
+.border2 {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding: 0.5rem;
+}
+.border2 div {
+  padding: 0rem 1rem 0rem 1rem;
+  border-radius: 10px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+
+  /* height: 2.5rem; */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  gap: 8px;
+  color: #cdbdff;
+  height: 2.5rem;
+}
+.drop div h2 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  display: flex;
+  align-items: center;
+  padding: 0rem 0.5rem 0 1.5rem;
+  gap: 8px;
+
+  color: #cdbdff;
+}
+.drop div h6 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #f7f5f2;
+  padding: 0rem 0.5rem 0 1.5rem;
 }
