--- a/pages/Navbar/Nav.module.css
+++ b/pages/Navbar/Nav.module.css
@@ -72,3 +72,13 @@
   margin-right: 1.4rem;
   cursor: pointer;
 }
+.toggle{
+  /* w-[100vw] h-[100vh] fixed top-0 left-0 !z-[50] cursor-default  */
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 50;
+  cursor: default;
+}
