--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Syne:wght@500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Syne:wght@528&display=swap");
+
 html,
 body {
   padding: 0;
